# mini_os

./: Cargo.toml  LICENSE  README.md  notes.org
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
test/: basic_boot.rs
tests/: heap_allocation.rs  stack_overflow.rs
