[package]
name = "mini_os"
version = "0.1.0"
authors = ["Grzegorz Caban <nabacg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8" # https://crates.io/crates/bootloader
volatile = "0.2.6"
spin = "0.5.2" 
x86_64 = "0.13.2" # https://docs.rs/x86_64/0.13.2/x86_64/
uart_16550 = "0.2.0" # serial port I/O lib https://docs.rs/uart_16550/0.2.12/uart_16550/
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

#[profile.dev]
#panic = "abort"
# ^ or it causes "duplicate lang item" errors on cargo test

[profile.release]
#panic = "abort"


# needed to  close QEMU after test run
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",  "-serial", "stdio",  "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1  passing success exit code to qemu
test-timeout = 300          # (in seconds)

[[test]]
name = "stack_overflow"
harness = false
